Fix visibility of alert when large amount of content

--- a/app/modules/notify/plugins/alert/less/alert.less
+++ b/app/modules/notify/plugins/alert/less/alert.less
@@ -3,7 +3,7 @@
 @import 'colours';
 
 .swal2-popup.swal2-modal {
-  max-height: 91%;
+  /* max-height: 91%; */
   overflow-y: auto;
   details {
     display: block;
